--- a/endnote.bib
+++ b/endnote.bib
@@ -500,3 +500,18 @@ Section: Report}
 	date = {2009-11-01},
 	langid = {english}
 }
+
+@article{mcneish_thinking_2020,
+	title = {Thinking twice about sum scores},
+	issn = {1554-3528},
+	url = {https://doi.org/10.3758/s13428-020-01398-0},
+	doi = {10.3758/s13428-020-01398-0},
+	abstract = {A common way to form scores from multiple-item scales is to sum responses of all items. Though sum scoring is often contrasted with factor analysis as a competing method, we review how factor analysis and sum scoring both fall under the larger umbrella of latent variable models, with sum scoring being a constrained version of a factor analysis. Despite similarities, reporting of psychometric properties for sum scored or factor analyzed scales are quite different. Further, if researchers use factor analysis to validate a scale but subsequently sum score the scale, this employs a model that differs from validation model. By framing sum scoring within a latent variable framework, our goal is to raise awareness that (a) sum scoring requires rather strict constraints, (b) imposing these constraints requires the same type of justification as any other latent variable model, and (c) sum scoring corresponds to a statistical model and is not a model-free arithmetic calculation. We discuss how unjustified sum scoring can have adverse effects on validity, reliability, and qualitative classification from sum score cut-offs. We also discuss considerations for how to use scale scores in subsequent analyses and how these choices can alter conclusions. The general goal is to encourage researchers to more critically evaluate how they obtain, justify, and use multiple-item scale scores.},
+	journaltitle = {Behavior Research Methods},
+	shortjournal = {Behav Res},
+	author = {{McNeish}, Daniel and Wolf, Melissa Gordon},
+	urldate = {2020-08-20},
+	date = {2020-04-22},
+	langid = {english},
+	file = {Springer Full Text PDF:/home/hcp4715/Zotero/storage/MVH6TEDR/McNeish and Wolf - 2020 - Thinking twice about sum scores.pdf:application/pdf}
+}
